added function returnFalsePositiveIds

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -345,6 +345,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Get Ids of False Positives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def returnFalsePositiveIds (test, pred_test):\n",
+    "    # get ids of test values\n",
+    "    test = (\n",
+    "        pd\n",
+    "        .merge(pd.DataFrame(test), mushrooms_train, left_index=True, right_index=True, how='left')[['Id', 'poisonous_y']]\n",
+    "        .rename(columns={\"poisonous_y\": \"poisonous\"})\n",
+    "    )\n",
+    "\n",
+    "    #get ids of false positives\n",
+    "    falsePositiveIds = (\n",
+    "        test\n",
+    "        .assign(prediction=pred_test)\n",
+    "        .query('poisonous == 0 & prediction == 1')\n",
+    "        ['Id']\n",
+    "    )\n",
+    "\n",
+    "    return list(falsePositiveIds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Random Forest"
    ]
   },
