changed function returnFalsePositivesIndex

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -354,23 +354,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def returnFalsePositiveIds (test, pred_test):\n",
-    "    # get ids of test values\n",
-    "    test = (\n",
-    "        pd\n",
-    "        .merge(pd.DataFrame(test), mushrooms_train, left_index=True, right_index=True, how='left')[['Id', 'poisonous_y']]\n",
-    "        .rename(columns={\"poisonous_y\": \"poisonous\"})\n",
-    "    )\n",
+    "def returnFalsePositivesIndex (test, pred_test):\n",
+    "    # # get ids of test values --> not necessary, because we use the index now\n",
+    "    # test = (\n",
+    "    #     pd\n",
+    "    #     .merge(pd.DataFrame(test), mushrooms_train, left_index=True, right_index=True, how='left')[['Id', 'poisonous_y']]\n",
+    "    #     .rename(columns={\"poisonous_y\": \"poisonous\"})\n",
+    "    # )\n",
     "\n",
-    "    #get ids of false positives\n",
-    "    falsePositiveIds = (\n",
+    "    #get index of false positives\n",
+    "    falsePositivesIndex = (\n",
     "        test\n",
     "        .assign(prediction=pred_test)\n",
     "        .query('poisonous == 0 & prediction == 1')\n",
-    "        ['Id']\n",
+    "        .Index\n",
     "    )\n",
     "\n",
-    "    return list(falsePositiveIds)"
+    "    return list(falsePositiveIndex)"
    ]
   },
   {
