commented XGBoost model

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -1429,14 +1429,14 @@
     }
    ],
    "source": [
-    "xgboost = XGBClassifier(random_state=1337)\n",
-    "xgboost.fit(X_train.to_numpy(), y_train.to_numpy())\n",
+    "# xgboost = XGBClassifier(random_state=1337)\n",
+    "# xgboost.fit(X_train.to_numpy(), y_train.to_numpy())\n",
     "\n",
-    "y_pred_train = xgboost.predict(X_train.to_numpy())\n",
-    "y_pred_test = xgboost.predict(X_test.to_numpy())\n",
+    "# y_pred_train = xgboost.predict(X_train.to_numpy())\n",
+    "# y_pred_test = xgboost.predict(X_test.to_numpy())\n",
     "\n",
-    "print('Accuracy on train-set: ', accuracy_score(y_true = y_train.to_numpy(), y_pred = y_pred_train))\n",
-    "print('Accuracy on test-set: ', accuracy_score(y_true = y_test.to_numpy(), y_pred = y_pred_test))"
+    "# print('Accuracy on train-set: ', accuracy_score(y_true = y_train.to_numpy(), y_pred = y_pred_train))\n",
+    "# print('Accuracy on test-set: ', accuracy_score(y_true = y_test.to_numpy(), y_pred = y_pred_test))"
    ]
   },
   {
